# pingall

./: .goreleaser.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/aur/: config.env
packaging/aur/pingall/: .SRCINFO  PKGBUILD
packaging/aur/pingall-bin/: .SRCINFO  PKGBUILD
packaging/aur/pingall-git/: .SRCINFO  PKGBUILD
src/: lib.rs  main.rs
src/util/: mod.rs
