[package]
name = "pingall"
version = "1.0.2"
edition = "2024"
description = "Ping everything you can reach."
license = "GPL-3.0-or-later"
repository = "https://github.com/Fierthraix/pingall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
if-addrs = "0.15"
tokio = { version = "1", features = ["net", "process", "rt", "sync"] }
which = "8"

[target.'cfg(unix)'.dependencies]
tiny-ping = "0.5"

[target.'cfg(windows)'.dependencies]
dns-lookup = "3"
