[package]
name = "pingall"
version = "2.1.5"
edition = "2024"
description = "Ping everything you can reach."
license = "GPL-3.0-or-later"
repository = "https://github.com/Fierthraix/pingall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
if-addrs = "0.15"
pico-args = { version = "0.5", features = ["eq-separator"] }
tokio = { version = "1", features = ["net", "process", "rt", "sync"] }
which = "8"

[target.'cfg(unix)'.dependencies]
tiny-ping = "0.7.0"

[target.'cfg(windows)'.dependencies]
dns-lookup = "3"
